--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -356,16 +356,19 @@
   "audiobookList__heading": {
     "string": "Books"
   },
-  "bibleBook__backToChapter": {
+  "bibleChapter__backToChapter": {
     "string": "Back to Chapter Info"
   },
-  "bibleBook__chapterListTitle": {
+  "bibleChapter__chapterListTitle": {
     "string": "Other Chapters in Book"
   },
-  "bibleBook__disclaimer": {
+  "bibleChapter__disclaimer": {
     "string": "The terms and conditions governing the use of audio Bibles from Faith Comes By Hearing prevents the option to download and the integration of certain features on our platform."
   },
-  "bibleBook__readAlong": {
+  "bibleChapter__loading": {
+    "string": "Loading..."
+  },
+  "bibleChapter__readAlong": {
     "string": "Read Along"
   },
   "bibleVersionTypeLockup__type": {
