--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -41,9 +41,6 @@
   "audiobookList__heading": {
     "string": "Todos los audiolibros"
   },
-  "bibleBook__chapterListTitle": {
-    "string": "Otros capítulos del libro"
-  },
   "bibleVersionTypeLockup__type": {
     "string": "Versión bíblica"
   },
@@ -1095,9 +1092,6 @@
   "app__features5Kicker": {
     "string": "Descargar contenido en sus dispositivos para los momentos en los que no tenga señal o simplemente quiera evitar que sus datos se acaben."
   },
-  "bibleBook__disclaimer": {
-    "string": "Los términos y condiciones que rigen el uso de Audiobiblias de Faith Comes By Hearing impiden la opción de descarga y la integración de ciertas funciones en nuestra plataforma."
-  },
   "cardPost__typeLabel": {
     "string": "Blog"
   },
@@ -1623,12 +1617,6 @@
   "app__features5ImageAlt": {
     "comment": "Image alt text for the fifth feature",
     "string": "The download button on a sermon by Don Mackintosh"
-  },
-  "bibleBook__backToChapter": {
-    "string": "Back to Chapter Info"
-  },
-  "bibleBook__readAlong": {
-    "string": "Read Along"
   },
   "bible__title": {
     "string": "Biblia"
@@ -2728,5 +2716,20 @@
   },
   "molecule-bibleVersionTophat__disabledTooltip": {
     "string": "The displayed chapter is unavailable in this version"
+  },
+  "bibleChapter__backToChapter": {
+    "string": "Back to Chapter Info"
+  },
+  "bibleChapter__chapterListTitle": {
+    "string": "Other Chapters in Book"
+  },
+  "bibleChapter__disclaimer": {
+    "string": "The terms and conditions governing the use of audio Bibles from Faith Comes By Hearing prevents the option to download and the integration of certain features on our platform."
+  },
+  "bibleChapter__loading": {
+    "string": "Loading..."
+  },
+  "bibleChapter__readAlong": {
+    "string": "Read Along"
   }
 }
