--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -41,9 +41,6 @@
   "audiobookList__heading": {
     "string": "Tous les livres audio"
   },
-  "bibleBook__chapterListTitle": {
-    "string": "Autres chapitres du livre"
-  },
   "bibleVersionTypeLockup__type": {
     "string": "Version de la Bible"
   },
@@ -1095,9 +1092,6 @@
   "app__features5Kicker": {
     "string": "Téléchargez du contenu sur vos appareils pour pouvoir y accéder plus tard, pour ces moments où vous n'aurez pas de signal ou pour gérer votre consommation de données."
   },
-  "bibleBook__disclaimer": {
-    "string": "Les conditions contractuelles d'usage des Bibles audio issues de Faith Comes By Hearing empêchent qu'elles soient disponibles au téléchargement et limitent leur intégration à certaines fonctionnalités de notre plate-forme."
-  },
   "cardPost__typeLabel": {
     "string": "Blog"
   },
@@ -1623,12 +1617,6 @@
   "app__features5ImageAlt": {
     "comment": "Image alt text for the fifth feature",
     "string": "The download button on a sermon by Don Mackintosh"
-  },
-  "bibleBook__backToChapter": {
-    "string": "Back to Chapter Info"
-  },
-  "bibleBook__readAlong": {
-    "string": "Read Along"
   },
   "bible__title": {
     "string": "Bible"
@@ -2728,5 +2716,20 @@
   },
   "molecule-bibleVersionTophat__disabledTooltip": {
     "string": "The displayed chapter is unavailable in this version"
+  },
+  "bibleChapter__backToChapter": {
+    "string": "Back to Chapter Info"
+  },
+  "bibleChapter__chapterListTitle": {
+    "string": "Other Chapters in Book"
+  },
+  "bibleChapter__disclaimer": {
+    "string": "The terms and conditions governing the use of audio Bibles from Faith Comes By Hearing prevents the option to download and the integration of certain features on our platform."
+  },
+  "bibleChapter__loading": {
+    "string": "Loading..."
+  },
+  "bibleChapter__readAlong": {
+    "string": "Read Along"
   }
 }
