--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -2721,10 +2721,10 @@
     "string": "Back to Chapter Info"
   },
   "bibleChapter__chapterListTitle": {
-    "string": "Other Chapters in Book"
+    "string": "Andere Kapitel im Buch"
   },
   "bibleChapter__disclaimer": {
-    "string": "The terms and conditions governing the use of audio Bibles from Faith Comes By Hearing prevents the option to download and the integration of certain features on our platform."
+    "string": "Die allgemeinen Geschäftsbedingungen für die Nutzung der Audiobibeln von Faith Comes By Hearing unterbinden das Herunterladen sowie die Integration bestimmter Funktionen auf unserer Plattform."
   },
   "bibleChapter__loading": {
     "string": "Loading..."
