remove unused exports; intl

--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -2731,5 +2731,8 @@
   },
   "bibleChapter__readAlong": {
     "string": "Leia junto"
+  },
+  "container-version__loading": {
+    "string": "Carregando..."
   }
 }
