--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -2731,5 +2731,8 @@
   },
   "bibleChapter__readAlong": {
     "string": "Read Along"
+  },
+  "container-version__loading": {
+    "string": "Loading..."
   }
 }
