--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -2726,13 +2726,13 @@
   "bibleChapter__disclaimer": {
     "string": "Os termos e condições do uso das Bíblias em aúdio da “Faith Comes By Hearing” impedem a opção de download e a integração de certos recursos em nossa plataforma."
   },
-  "bibleChapter__loading": {
-    "string": "Carregando..."
-  },
   "bibleChapter__readAlong": {
     "string": "Leia junto"
   },
   "container-version__loading": {
     "string": "Carregando..."
+  },
+  "container-version__notFound": {
+    "string": "Chapter not found"
   }
 }
