--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -2717,11 +2717,17 @@
   "molecule-bibleVersionTophat__disabledTooltip": {
     "string": "The displayed chapter is unavailable in this version"
   },
+  "bibleChapter__backToChapter": {
+    "string": "Back to Chapter Info"
+  },
   "bibleChapter__chapterListTitle": {
     "string": "Otros capítulos del libro"
   },
   "bibleChapter__disclaimer": {
     "string": "Los términos y condiciones que rigen el uso de Audiobiblias de Faith Comes By Hearing impiden la opción de descarga y la integración de ciertas funciones en nuestra plataforma."
+  },
+  "bibleChapter__readAlong": {
+    "string": "Read Along"
   },
   "container-version__loading": {
     "string": "Loading..."
