--- a/public/lang/zh.json
+++ b/public/lang/zh.json
@@ -2728,5 +2728,11 @@
   },
   "container-version__notFound": {
     "string": "Chapter not found"
+  },
+  "bibleChapter__backToChapter": {
+    "string": "Back to Chapter Info"
+  },
+  "bibleChapter__readAlong": {
+    "string": "Read Along"
   }
 }
