--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -2734,5 +2734,11 @@
   },
   "bibleChapter__readAlong": {
     "string": "Read Along"
+  },
+  "organisms-passageNavigation__chapterGridError": {
+    "string": "Something went wrong. Please try again later."
+  },
+  "organisms-passageNavigation__chapterGridLoading": {
+    "string": "Loading chapters..."
   }
 }
