--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -2740,5 +2740,8 @@
   },
   "organisms-passageNavigation__chapterGridLoading": {
     "string": "Loading chapters..."
+  },
+  "molecule-searchBar__reSearch": {
+    "string": "< 結果に戻る"
   }
 }
