--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -367,9 +367,6 @@
   "loadingCards-ariaLabel": {
     "string": "Lädt..."
   },
-  "loginForm-reset__doneButton": {
-    "string": "Fertig"
-  },
   "loginForm-reset__emailLabel": {
     "string": "E-Mail-Adresse"
   },
@@ -2717,9 +2714,6 @@
   "molecule-bibleVersionTophat__disabledTooltip": {
     "string": "The displayed chapter is unavailable in this version"
   },
-  "bibleChapter__chapterListTitle": {
-    "string": "Andere Kapitel im Buch"
-  },
   "bibleChapter__disclaimer": {
     "string": "Die allgemeinen Geschäftsbedingungen für die Nutzung der Audiobibeln von Faith Comes By Hearing unterbinden das Herunterladen sowie die Integration bestimmter Funktionen auf unserer Plattform."
   },
@@ -2743,5 +2737,12 @@
   },
   "molecule-searchBar__reSearch": {
     "string": "< Terug naar Resultaten"
+  },
+  "registerForm__registerFailureMessage": {
+    "string": "Register failed"
+  },
+  "register__successMessage": {
+    "comment": "register success message",
+    "string": "Successfully registered!"
   }
 }
