--- a/public/lang/ru.json
+++ b/public/lang/ru.json
@@ -2746,6 +2746,6 @@
     "string": "Successfully registered!"
   },
   "bibleVersionTophat__version": {
-    "string": "VERSION"
+    "string": "версия"
   }
 }
