improve(bible): add alert and route user back in case of invalid chapters

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -616,7 +616,7 @@
     "string": "Loading..."
   },
   "container-version__notFound": {
-    "string": "Chapter not found"
+    "string": "Version not found"
   },
   "create": {
     "string": "Create"
