--- a/public/lang/zh.json
+++ b/public/lang/zh.json
@@ -2744,5 +2744,9 @@
   },
   "bibleVersionTophat__version": {
     "string": "版本"
+  },
+  "container-version__notFound": {
+    "comment": "Chapter not available in selected version.",
+    "string": "章节未找到"
   }
 }
