--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -2744,5 +2744,9 @@
   },
   "bibleVersionTophat__version": {
     "string": "バージョン"
+  },
+  "container-version__notFound": {
+    "comment": "Chapter not available in selected version.",
+    "string": "章が見つかりません"
   }
 }
