--- a/public/lang/ru.json
+++ b/public/lang/ru.json
@@ -2744,5 +2744,9 @@
   },
   "bibleVersionTophat__version": {
     "string": "версия"
+  },
+  "container-version__notFound": {
+    "comment": "Chapter not available in selected version.",
+    "string": "Глава не найдена"
   }
 }
